# OS_Gal_Gal

./: README.md
Assignment1/: CMakeLists.txt
Assignment1/xv6-riscv-riscv/: Makefile  fs.img
Assignment1/xv6-riscv-riscv/kernel/: defs.h  kernel  kernel.asm  kernel.sym  proc.c  proc.h  syscall.c  syscall.h  sysproc.c
Assignment1/xv6-riscv-riscv/user/: _cat  _echo  _env  _forktest  _grep  _grind  _init  _kill  _ln  _ls  _mkdir  _rm  _sh  _stressfs  _test  _usertests  _wc  _zombie  env.asm  env.c  env.sym  grind.asm  grind.sym  initcode.out  ls.asm  ls.sym  sh.asm  sh.sym  test.asm  test.c  test.sym  user.h  usertests.asm  usertests.sym  usys.pl
Assignment2/xv6-riscv-riscv/: 316415553_206055527.patch  Makefile
Assignment2/xv6-riscv-riscv/kernel/: cas.S  defs.h  proc.c  proc.h  syscall.c  sysproc.c
Assignment2/xv6-riscv-riscv/user/: forktest.c  test_cas.c  usertests.c
Assignment3/kernel/: cas.S  defs.h  kalloc.c  trap.c  vm.c
Assignment4/kernel/: defs.h  fcntl.h  file.c  fs.c  fs.h  param.h  stat.h  sysfile.c
Assignment4/user/: ln.c  ls.c  usertests.c
